<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <android.support.design.widget.CoordinatorLayout

        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FormActivity">

        <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->

        <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--app:layout_scrollFlags="scroll|enterAlways"-->
        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->
        <!--</android.support.design.widget.AppBarLayout>-->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.example.android.complaintcrmd.FormActivity">


            <!-- Report Header -->
            <TextView
                android:id="@+id/report"
                style="@style/HeaderTextStyle"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="16dp"
                android:text="@string/error_report"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <!-- Station-->
            <TextView
                android:id="@+id/station"
                style="@style/FormStyle"
                android:fontFamily="sans-serif-medium"
                android:text="@string/station" />

            <!-- Station Fill-->
            <TextView
                android:id="@+id/station_fill"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:background="@color/box_fill"
                android:fontFamily="sans-serif-medium"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />


            <!-- Time-->
            <TextView
                android:id="@+id/time"
                style="@style/FormStyle"
                android:fontFamily="sans-serif-medium"
                android:text="@string/time" />

            <!-- Time Fill-->
            <TextView
                android:id="@+id/time_fill"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:background="@color/box_fill"
                android:fontFamily="sans-serif-medium"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <!-- Date-->
            <TextView
                android:id="@+id/date"
                style="@style/FormStyle"
                android:fontFamily="sans-serif-medium"
                android:text="@string/date" />


            <!-- Date Fill-->
            <TextView
                android:id="@+id/date_fill"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:background="@color/box_fill"
                android:fontFamily="sans-serif-medium"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fault_type"
                    style="@style/FormStyle"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/fault_type" />

                <Spinner
                    android:id="@+id/spinner1"
                    style="@style/SpinnerStyle"
                    android:layout_toRightOf="@id/fault_type"
                    android:prompt="@string/error_type_prompt" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sub_fault_type"
                    style="@style/FormStyle"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sub_fault_type" />

                <Spinner
                    android:id="@+id/spinner2"
                    style="@style/SpinnerStyle"
                    android:layout_toRightOf="@id/sub_fault_type"
                    android:prompt="@string/error_type_prompt" />

            </RelativeLayout>

            <TextView
                android:id="@+id/comments"
                style="@style/FormStyle"
                android:fontFamily="sans-serif-medium"
                android:text="@string/comments" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/comment_box"
                android:layout_margin="16dp"
                android:gravity="top"
                android:textSize="20sp"
                android:background="@color/box_fill"
                android:hint="@string/type_here"
                android:imeOptions="actionDone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:padding="8dp"
                    android:id="@+id/submit_button"
                    android:layout_margin="16dp"
                    android:textSize="12sp"
                    android:text="@string/submit_button"
                    android:textColor="@color/buttonColor"
                    android:background="@color/default_color"
                    android:onClick="clickable" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:padding="8dp"
                    android:id="@+id/cancel_button"
                    android:layout_toRightOf="@id/submit_button"
                    android:layout_margin="16dp"
                    android:textSize="12sp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/cancel_button"
                    android:textColor="@color/buttonColor"
                    android:background="@color/default_color" />


            </RelativeLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

</ScrollView>

