<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"

        tools:context="com.example.android.splash.LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:id="@+id/header"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <!--<TextView-->
            <!--android:id="@+id/txtview1_login"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:fontFamily="sans-serif-condensed"-->
            <!--android:textStyle="bold"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:text="@string/prompt_username"-->

            <!--android:textColor="@color/textColor"-->
            <!--android:textSize="24sp" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/username_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:hint="@string/emp_username"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/buttonColor"
                    android:textColorHint="#000000"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-medium" />
            </android.support.design.widget.TextInputLayout>


            <!--<TextView-->
            <!--android:id="@+id/txtview2_login"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_below="@id/username_login"-->
            <!--android:text="@string/prompt_password"-->
            <!--android:textColor="@color/textColor"-->
            <!--android:textSize="24sp"-->
            <!--android:fontFamily="sans-serif-condensed"-->
            <!--android:textStyle="bold" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_login"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="24sp"
                    android:hint="@string/prompt_password"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:imeOptions="actionDone"
                    android:backgroundTint="@color/buttonColor"
                    android:textColorHint="#000000"
                    android:fontFamily="sans-serif-medium" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/saveLoginCheckBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editTextPassword"
                android:text="@string/remember"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium" />

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_login"
                android:layout_marginTop="35dp"
                android:background="@color/default_color"
                android:text="@string/login_button"
                android:textColor="@color/buttonColor"
                android:textStyle="bold" />


        </LinearLayout>

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--">-->

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/sign_up_text"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"

            />


        <!--</RelativeLayout>-->
    </LinearLayout>
</ScrollView>